Closed Bug 1806995 Opened 1 year ago Closed 1 year ago

Perma dom/media/test/reftest/color_quads/720p.png.bt709.bt709.pc.yuv420p.vp9.webm == dom/media/test/reftest/color_quads/720p.png.bt709.bt709.pc.yuv420p.av1.webm | image comparison, max difference: 36, number of differing pixels: 187407

Categories

(Core :: Audio/Video: Playback, defect, P5)

defect

Tracking

()

RESOLVED FIXED
111 Branch
Tracking Status
firefox-esr102 --- unaffected
firefox108 --- unaffected
firefox109 --- wontfix
firefox110 --- wontfix
firefox111 --- fixed

People

(Reporter: intermittent-bug-filer, Assigned: az)

References

(Regression)

Details

(Keywords: intermittent-failure, regression)

Attachments

(1 file)

Filed by: imoraru [at] mozilla.com
Parsed log: https://treeherder.mozilla.org/logviewer?job_id=400472950&repo=mozilla-central
Full log: https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/WCObWSOWQIWRpO8Lc3dnLg/runs/0/artifacts/public/logs/live_backing.log
Reftest URL: https://hg.mozilla.org/mozilla-central/raw-file/tip/layout/tools/reftest/reftest-analyzer.xhtml#logurl=https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/WCObWSOWQIWRpO8Lc3dnLg/runs/0/artifacts/public/logs/live_backing.log&only_show_unexpected=1


''' INFO '''

The colors from test image are brighter than the colors from the reference image. Also there is a big part of the test image highlighted as different.

''' INFO '''

[task 2022-12-22T12:02:10.960Z] 12:02:10     INFO - REFTEST TEST-START | dom/media/test/reftest/color_quads/720p.png.bt709.bt709.pc.yuv420p.vp9.webm == dom/media/test/reftest/color_quads/720p.png.bt709.bt709.pc.yuv420p.av1.webm
[task 2022-12-22T12:02:10.960Z] 12:02:10     INFO - REFTEST TEST-LOAD | file:///opt/worker/tasks/task_1671710295/build/tests/reftest/tests/dom/media/test/reftest/reftest_video.html?src=color_quads/720p.png.bt709.bt709.pc.yuv420p.vp9.webm | 7 / 29 (24%)
[task 2022-12-22T12:02:11.146Z] 12:02:11     INFO - REFTEST TEST-LOAD | file:///opt/worker/tasks/task_1671710295/build/tests/reftest/tests/dom/media/test/reftest/reftest_video.html?src=color_quads/720p.png.bt709.bt709.pc.yuv420p.av1.webm | 7 / 29 (24%)
[task 2022-12-22T12:02:11.301Z] 12:02:11     INFO - REFTEST INFO | REFTEST fuzzy test (0, 0) <= (36, 187407) <= (16, 1874)
[task 2022-12-22T12:02:11.407Z] 12:02:11     INFO - REFTEST TEST-UNEXPECTED-FAIL | dom/media/test/reftest/color_quads/720p.png.bt709.bt709.pc.yuv420p.vp9.webm == dom/media/test/reftest/color_quads/720p.png.bt709.bt709.pc.yuv420p.av1.webm | image comparison, max difference: 36, number of differing pixels: 187407
[task 2022-12-22T12:02:11.407Z] 12:02:11     INFO - REFTEST   IMAGE 1 (TEST): data:image/png;base64,<...>
[task 2022-12-22T12:02:11.407Z] 12:02:11     INFO - REFTEST   IMAGE 2 (REFERENCE): data:image/png;base64,<...>
[task 2022-12-22T12:02:11.407Z] 12:02:11     INFO - REFTEST TEST-END | dom/media/test/reftest/color_quads/720p.png.bt709.bt709.pc.yuv420p.vp9.webm == dom/media/test/reftest/color_quads/720p.png.bt709.bt709.pc.yuv420p.av1.webm
[task 2022-12-22T12:02:11.407Z] 12:02:11     INFO - REFTEST TEST-START | dom/media/test/reftest/color_quads/720p.png.bt709.bt709.pc.yuv420p.h264.mp4 == dom/media/test/reftest/color_quads/720p.png.bt709.bt709.pc.yuv420p.av1.webm

Hi Jim! Can you please take a look at this? I'm not really sure what caused this.
Thank you!

Flags: needinfo?(jmathies)
Flags: needinfo?(jmuizelaar)
Regressed by: 1806391

Set release status flags based on info from the regressing bug 1806391

I wonder if this has something to do with the color work gfx folks have been doing?

Flags: needinfo?(jmathies)
Flags: needinfo?(jgilbert)
Flags: needinfo?(azebrowski)

I think that this can be fixed if I re-add the HW decode support check to the decoder object that was reverted as part of the patch referenced. It seems to work from this run, and I have a longer run going now with some additional tests. We haven't been able to repro the macOS crashes so I'm not certain that re-adding that check won't also cause the crash issue again, but I'll investigate more tomorrow.

Flags: needinfo?(jmuizelaar)
Flags: needinfo?(jgilbert)

The failure differences look like full-vs-narrow range, or something like that. Maybe something in the decoders/glue are miscommunicating here.
Mac, so bradwerth maybe?

Flags: needinfo?(bwerth)

Oh, I missed that :az has a lead on this, so nevermind!

Flags: needinfo?(bwerth)
Assignee: nobody → azebrowski
Status: NEW → ASSIGNED
Pushed by azebrowski@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/bfc2d6024269
Directly query macOS decoder HW acceleration status as part of HW support checks. r=jolin
Status: ASSIGNED → RESOLVED
Closed: 1 year ago
Resolution: --- → FIXED
Target Milestone: --- → 111 Branch

The patch landed in nightly and beta is affected.
:az, is this bug important enough to require an uplift?

  • If yes, please nominate the patch for beta approval.
  • If no, please set status-firefox110 to wontfix.

For more information, please visit auto_nag documentation.

Flags: needinfo?(azebrowski)
Flags: needinfo?(azebrowski)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: