Bug 1806995 - Directly query macOS decoder HW acceleration status as part of HW support checks. r=jolin

This patch should fix regressions [1806993](https://bugzilla.mozilla.org/show_bug.cgi?id=1806993) and [1806995](https://bugzilla.mozilla.org/show_bug.cgi?id=1806995) caused by the crash fix in [1806391](https://bugzilla.mozilla.org/show_bug.cgi?id=1806391). It does so by reintroducing the `decoder->IsHardwareAccelerated()` check to verify hardware acceleration, instead of assuming support if an accelerated decoder can be successfully initialized. This patch does *not* re-add the `H264` acceleration check which I believe was the original cause of the crash. However, we haven't yet been able to repro the original crash and I'm not certain that this patch won't reintroduce it. I'd appreciate feedback on this.

Differential Revision: https://phabricator.services.mozilla.com/D166621